2011-06-02  Bernhard Walle <bernhard@bwalle.de>

	* Add operator bool to OptionValue to simplify usage of the option
	  parser.
	* Add Datetime C'tor that accepts broken-out dates.

2011-05-23  Bernhard Walle <bernhard@bwalle.de>

	* Add Datetime::dateStr().

2011-05-14  Bernhard Walle <bernhard@bwalle.de>

	* Fix leak in DETACHED threads.
	* Log the error when the reportThread cannot be started.

2011-05-09  Bernhard Walle <bernhard@bwalle.de>

	* Fix build on Linux with gcc 4.6.
	* Also build the thread example.
	* Cleanup the memory of the thread when running as DETACHED thread.

2011-05-08  Bernhard Walle <bernhard@bwalle.de>

	* Allow the creation of detached threads.

2011-05-02  Bernhard Walle <bernhard@bwalle.de>

	* Implement bw::system().

2011-04-28  Bernhard Walle <bernhard@bwalle.de>

	* stringutil: Convert boolean values to "false"/"true".
	* Add 'apidoc' and 'tags' target to CMake.

2011-04-27  Bernhard Walle <bernhard@bwalle.de>

	* Add Datetime class.
	* Use Datetime for the logging timestamp.
	* Add default constructor for Datetime.
	* Fix bug in replace_char when multiple replacements have to
	  be made.

2011-04-26  Bernhard Walle <bernhard@bwalle.de>

	* Add bw::str().
	* Fix replace_char(): Don't delete everything after the first
	  character that should be replaced.
	* serialfile: Don't crash when the devices doesn't exist.

2011-04-25  Bernhard Walle <bernhard@bwalle.de>

	* Add option grouping to the OptionParser.
	* Fix include of bwerror.h in <io/serialfile.h>.
	* Add 'string' group to the doxygen documentation.

2011-04-23  Bernhard Walle <bernhard@bwalle.de>

	* Add Debug to the 'log' doxygen group.
	* Include <string> in <libbw/log/debug.h>.

2011-04-22  Bernhard Walle <bernhard@bwalle.de>

	* Move logging (both debug log and error log) in own subdirectory.
	* Add Doxygen group 'log'.
	* Add bw::thread::MutexLocker.
	* Use localtime_r() if available.
	* Make error logging thread safe.

2011-04-18  Bernhard Walle <bernhard@bwalle.de>
