@@ -31,4 +31,5 @@
 #cmakedefine HAVE_THREADS
 #cmakedefine HAVE_LOCALTIME_R
 #cmakedefine HAVE_GMTIME_R
+#cmakedefine HAVE_STRFTIME
 
