@@ -3,6 +3,7 @@
 	* Add operator bool to OptionValue to simplify usage of the option
 	  parser.
 	* Add Datetime C'tor that accepts broken-out dates.
+	* Add Datetime::strftime().
 
 2011-05-23  Bernhard Walle <bernhard@bwalle.de>
 
